--- a/content/docs/components/text-slider.mdx
+++ b/content/docs/components/text-slider.mdx
@@ -67,3 +67,13 @@ export  function mergeRefs<T>(...refs: (React.Ref<T> | undefined)[]) {
 
 </Tabs>
 
+### Props
+
+| Name           | Type                                                  | Description                                                            |
+| -------------- | ----------------------------------------------------- | ---------------------------------------------------------------------- |
+| `direction`    | `"up"\|"down"`                                        | Direction of the slide.                                                |
+| `duration`     | `number`                                              | Duration of the animation.                                             |
+| `ease`         | `string`                                              | Animation style, [refers to gsap docs](https://gsap.com/docs/v3/Eases) |
+| `stagger`      | `number`                                              | Delay between two consecuetive element's animation `seconds`.       |
+| `start`        | `string` or `number` or `()=>string\|number`          | Animation start point, [refers to gsap docs](https://gsap.com/docs/v3/Plugins/ScrollTrigger/?page=1#start)  |
+| `end`          | `string` or `number` or `()=>string\|number`          | Animation end point, [refers to gsap docs](https://gsap.com/docs/v3/Plugins/ScrollTrigger/?page=1#end)  |
