fix missing files

--- a/content/docs/components/text-slider.mdx
+++ b/content/docs/components/text-slider.mdx
@@ -5,7 +5,7 @@ links:
   doc: https://www.radix-ui.com/docs/primitives/components/accordion
 ---
 
-<ComponentPreview 
+<ComponentPreview
   name="text-slider-demo"
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
@@ -47,7 +47,7 @@ export  function mergeRefs<T>(...refs: (React.Ref<T> | undefined)[]) {
 
 ```
 
-<Step>Make a file and copy paste this code in a file with name CustomCursor</Step>
+<Step>Make a file and copy paste this code in a file with name `text-slider.tsx`</Step>
 
 <ComponentSource name="text-slider"/>
 
@@ -59,7 +59,7 @@ export  function mergeRefs<T>(...refs: (React.Ref<T> | undefined)[]) {
 
 <Steps>
 
-<Step>sdsd</Step>
+<Step>Yet to come.</Step>
 
 </Steps>
 
