adding new demo for cursor

--- a/content/docs/components/custom-pointer.mdx
+++ b/content/docs/components/custom-pointer.mdx
@@ -54,3 +54,8 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 </Tabs>
 
+## Usage
+
+### Custom Pointer With Custom Cursor
+
+<ComponentPreview name={"custom-pointer-custom-cursor"}/>
