code is also rendering for the new demo of custom cursor

--- a/content/docs/components/custom-pointer.mdx
+++ b/content/docs/components/custom-pointer.mdx
@@ -58,4 +58,4 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 ### Custom Pointer With Custom Cursor
 
-<ComponentPreview name={"custom-pointer-custom-cursor"}/>
+<ComponentPreview name="custom-pointer-custom-cursor"/>
