fixed a typo in mdx files

--- a/content/docs/components/copy-icon.mdx
+++ b/content/docs/components/copy-icon.mdx
@@ -32,7 +32,7 @@ npm install gsap react-icons
 
 {" "}
 
-<Step>Make a file file for cn function and match the import afterwards</Step>
+<Step>Make a file for cn function and match the import afterwards</Step>
 
 ```tsx
 import clsx, { ClassValue } from "clsx"
