--- a/content/docs/components/custom-pointer.mdx
+++ b/content/docs/components/custom-pointer.mdx
@@ -26,7 +26,7 @@ links:
 npm install gsap
 ```
 
-<Step>Make a file file for cn function and match the import afterwards</Step>
+<Step>Make a file for cn function and match the import afterwards</Step>
 
 ```tsx
 import clsx, { ClassValue } from "clsx"
