--- a/content/docs/components/motion-cards.mdx
+++ b/content/docs/components/motion-cards.mdx
@@ -25,7 +25,7 @@ npm install gsap @gsap/react
 ```
 
 <Step>
-  Make a file file for cn and mergerRef functions and match the import
+  Make a file for cn and mergerRef functions and match the import
   afterwards
 </Step>
 
