added a prop to control the text size

--- a/content/docs/components/text-hover-effect.mdx
+++ b/content/docs/components/text-hover-effect.mdx
@@ -30,6 +30,7 @@ npm install gsap react-icons
 <ComponentSource name="text-hover-effect" />
 
 </Steps>
+
   </TabsContent>
 
   <TabsContent value="cli">
@@ -52,5 +53,6 @@ npm install gsap react-icons
 | ------------------------ | ------------------------ | ----------------------------------------------------------------------------------- |
 | `text`\*                 | `string`                 | Text that has to have the animation                                                 |
 | `duration`               | `number`                 | Time in seconds to reach the final point of animation.                                                           |
+| `fontSize`               | `number`                 | Font size in pixels `default is 56` same as `text-7xl`.                                                           |
 
 > **Note:** Props marked with `*` are required.
