--- a/content/docs/components/product-preview.mdx
+++ b/content/docs/components/product-preview.mdx
@@ -59,17 +59,18 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 ### Props
 
-| Name              | Type                                                                                                                                | Description                                                                                  |
-| ----------------- | ----------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------- |
-| `productSrc`\*    | `string`                                                                                                                            | Source URL of the product image.                                                             |
-| `articleTop`\*    | `{ <br> title: { text: string, className?: string }, description: { text: string, className?: string }, icon?: React.ReactNode }[]` | Array of article objects displayed at the top with title, description, and optional icon.    |
-| `articleBottom`\* | `{ title: { text: string, className?: string }, description: { text: string, className?: string }, icon?: React.ReactNode }[]`      | Array of article objects displayed at the bottom with title, description, and optional icon. |
-| `className`       | `string`                                                                                                                            | Additional class names for styling the main container.                                       |
-| `productHeight`   | `number` (default: `298`)                                                                                                           | Height of the product image before scaling.                                                  |
-| `productWidth`    | `number` (default: `1250`)                                                                                                          | Width of the product image before scaling.                                                   |
-| `scaleFactor`     | `number` (default: `0.1`)                                                                                                           | Scale factor for resizing the product image.                                                 |
-| `rotate`          | `number` (default: `30`)                                                                                                            | Rotation angle of the product image in degrees.                                              |
-| `length`          | `number` (default: `(articleTop.length * 2 - 1) * 50`)                                                                              | Length used in ScrollTrigger for defining the end point.                                     |
-| `scroller`        | `RefObject<HTMLElement>`                                                                                                            | Scroll container reference for ScrollTrigger.                                                |
+| Name              | Type                                                  | Description                                                                                  |
+| ----------------- | ------------------------------------------------------| -------------------------------------------------------------------------------------------- |
+| `productSrc`\*    | `string`                                              | Source URL of the product image.                                                             |
+| `articleTop`\*    | `Array`                                               | Array of article objects displayed at the top with title, description, and optional icon.    |
+| `articleBottom`\* | `Array`                                               | Array of article objects displayed at the bottom with title, description, and optional icon. |
+| `className`       | `string`                                              | Additional class names for styling the main container.                                       |
+| `productHeight`   | `number` (default: `298`)                             | Height of the product image before scaling.                                                  |
+| `productWidth`    | `number` (default: `1250`)                            | Width of the product image before scaling.                                                   |
+| `scaleFactor`     | `number` (default: `0.1`)                             | Scale factor for resizing the product image.                                                 |
+| `rotate`          | `number` (default: `30`)                              | Rotation angle of the product image in degrees.                                              |
+| `length`          | `number` (default: `(articleTop.length * 2 - 1) * 50`)| Length used in ScrollTrigger for defining the end point.                                     |
+| `scroller`        | `RefObject<HTMLElement>`                              | Scroll container reference for ScrollTrigger.                                                |
+| `start`           | `string ` (Default is `"top top"`.)                   | Animation start point, [GSAP docs](https://gsap.com/docs/v3/Plugins/ScrollTrigger/?page=1#start).|
 
 > **Note:** Props marked with `*` are required.
