--- a/content/docs/components/custom-pointer.mdx
+++ b/content/docs/components/custom-pointer.mdx
@@ -14,6 +14,7 @@ links:
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -48,7 +49,11 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 <Steps>
 
-<Step>sdsd</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/custom-pointer.json
+```
 
 </Steps>
 
