--- a/content/docs/components/navigation-icon.mdx
+++ b/content/docs/components/navigation-icon.mdx
@@ -16,6 +16,7 @@ description: When hovering over the navigation icon, the text should move upward
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
   <TabsContent value="manual">
@@ -60,7 +61,11 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 {" "}
 
-<Step>Cli Steps</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/navigation-icon.json
+```
 
   </Steps>
 
