--- a/content/docs/components/reveal-text.mdx
+++ b/content/docs/components/reveal-text.mdx
@@ -13,6 +13,7 @@ description: A dynamic text component that reveals an image on hover with smooth
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -45,7 +46,11 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 <Steps>
 
-<Step>Yet to come.</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/reveal-text.json
+```
 
 </Steps>
 
