--- a/content/docs/components/text-rollup-effect.mdx
+++ b/content/docs/components/text-rollup-effect.mdx
@@ -12,6 +12,7 @@ description: A rollup effect for your texts
 
   <TabsList>
     <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
   </TabsList>
 
   <TabsContent value="manual">
@@ -37,7 +38,13 @@ description: A rollup effect for your texts
   <TabsContent value="cli">
 
     <Steps>
-      <Step>Cli Steps</Step>
+     
+     <Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/text-rollup-effect.json
+```
+
     </Steps>
 
   </TabsContent>
