--- a/content/docs/components/animated-tooltip.mdx
+++ b/content/docs/components/animated-tooltip.mdx
@@ -16,6 +16,7 @@ description: A customizable animated tooltip component.
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
   <TabsContent value="manual">
@@ -95,7 +96,11 @@ export default nextConfig;
 
 {" "}
 
-<Step>Cli Steps</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/animated-tooltip.json
+```
 
   </Steps>
 
