--- a/content/docs/components/floating-navbar.mdx
+++ b/content/docs/components/floating-navbar.mdx
@@ -12,6 +12,7 @@ description: This component provides an elegant navigation menu with animated dr
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -50,7 +51,11 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 <Steps>
 
-<Step>Yet to come.</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/floating-navbar.json
+```
 
 </Steps>
 
