--- a/content/docs/components/image-trail.mdx
+++ b/content/docs/components/image-trail.mdx
@@ -12,6 +12,7 @@ description: A dynamic and interactive React component that creates a trail of i
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -38,7 +39,11 @@ npm install gsap @gsap/react
 
 <Steps>
 
-<Step>Yet to come.</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/image-trail.json
+```
 
 </Steps>
 
