--- a/content/docs/components/infinite-moving-cards.mdx
+++ b/content/docs/components/infinite-moving-cards.mdx
@@ -12,6 +12,7 @@ description: This InfiniteMovingCards component creates a continuously scrolling
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -38,7 +39,11 @@ npm install gsap @gsap/react
 
 <Steps>
 
-<Step>Yet to come.</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/infinite-moving-cards.json
+```
 
 </Steps>
 
