--- a/content/docs/components/motion-cards.mdx
+++ b/content/docs/components/motion-cards.mdx
@@ -12,6 +12,7 @@ description: The MotionCard component is a GSAP-powered animated card layout tha
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -49,7 +50,11 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 <Steps>
 
-<Step>Yet to come.</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/motion-cards.json
+```
 
 </Steps>
 
