--- a/content/docs/components/scroll-text-flow.mdx
+++ b/content/docs/components/scroll-text-flow.mdx
@@ -12,6 +12,7 @@ description: ScrollTextFlow is a React component that creates a dynamic scrollin
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -44,7 +45,11 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 <Steps>
 
-<Step>Yet to come.</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/scroll-text-flow.json
+```
 
 </Steps>
 
