--- a/content/docs/components/scrolling-cards.mdx
+++ b/content/docs/components/scrolling-cards.mdx
@@ -12,6 +12,7 @@ description: A dynamic, scroll-triggered component that creates an engaging card
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
 <TabsContent value="manual">
@@ -46,7 +47,11 @@ export const cn = (...classes: ClassValue[]) => twMerge(clsx(...classes))
 
 <Steps>
 
-<Step>sdsd</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/scrolling-cards.json
+```
 
 </Steps>
 
