--- a/content/docs/components/text-hover-effect.mdx
+++ b/content/docs/components/text-hover-effect.mdx
@@ -12,6 +12,7 @@ description: Highligts the text on hover
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
+  <TabsTrigger value="cli">Cli</TabsTrigger>
 </TabsList>
 
   <TabsContent value="manual">
@@ -39,7 +40,11 @@ npm install gsap react-icons
 
 {" "}
 
-<Step>Cli Steps</Step>
+<Step>Run the following command </Step>
+
+```bash
+npx shadcn@latest add https://ui.unizoy.com/r/text-hover-effect.json
+```
 
   </Steps>
 
