revamp:changed the text sizes making them responsive and also added credits

--- a/content/docs/components/carousel.mdx
+++ b/content/docs/components/carousel.mdx
@@ -104,3 +104,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/carousel.json
   </TabsContent>
 
   </Tabs>
+
+<Callout className="mb-6">
+
+**Credit:** This component is inspired by [Aceternity](https://ui.aceternity.com/components/carousel).
+
+</Callout>
