--- a/content/docs/components/image-trail.mdx
+++ b/content/docs/components/image-trail.mdx
@@ -65,3 +65,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/image-trail.json
 | `easeForMovement` | `string`   | The easing function applied to image movement (e.g., "power2.out"). Default is `"none"`.                                           |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Zypsy](https://www.zypsy.com/work).
+
+</Callout>
