--- a/content/docs/components/infinite-moving-cards.mdx
+++ b/content/docs/components/infinite-moving-cards.mdx
@@ -62,3 +62,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/infinite-moving-cards.json
 | `className` | `string` | Additional CSS class names to apply to the container element for custom styling. Optional. |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Aceternity](https://ui.aceternity.com/components/infinite-moving-cards).
+
+</Callout>
