--- a/content/docs/components/rotating-text.mdx
+++ b/content/docs/components/rotating-text.mdx
@@ -73,3 +73,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/rotating-text.json
 | `end`         | `string \| number \| ScrollTrigger.StartEndFunc` | End point for the ScrollTrigger animation.                            |
 | `scrub`       | `number \| boolean`                      | Controls the smoothness of the animation linked to scroll position.           |
 | `markers`     | `boolean \| ScrollTrigger.MarkersVars`   | Toggle or configure markers to visualize ScrollTrigger start and end points.  |
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Saisei](https://saisei-sbj.webflow.io/).
+
+</Callout>
