--- a/content/docs/components/scaling-sliding-cards.mdx
+++ b/content/docs/components/scaling-sliding-cards.mdx
@@ -73,3 +73,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/scaling-sliding-cards.json
 | `scrollerRef`            | `RefObject<HTMLElement>`     | A ref for the scroll container to synchronize scrolling behavior.                                                  |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Wix](https://www.wix.com/studio/pantone-color-of-the-year-2025).
+
+</Callout>
