--- a/content/docs/components/scroll-text-flow.mdx
+++ b/content/docs/components/scroll-text-flow.mdx
@@ -74,3 +74,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/scroll-text-flow.json
 | `scrollerRef`             | `RefObject<HTMLElement>`     | A reference for the custom scroll container to synchronize scrolling behavior.                                      |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [The First The Last](https://thefirstthelast.agency/).
+
+</Callout>
