--- a/content/docs/components/scrolling-video-cards.mdx
+++ b/content/docs/components/scrolling-video-cards.mdx
@@ -75,3 +75,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/scrolling-video-cards.json
 | `scrollerRef`               | `RefObject<HTMLElement>`     | A ref for the scroll container to synchronize scrolling behavior.                                                          |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Rhythm Influence](https://www.rhythminfluence.com/).
+
+</Callout>
