--- a/content/docs/components/sliding-cards.mdx
+++ b/content/docs/components/sliding-cards.mdx
@@ -119,3 +119,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/sliding-cards.json
 | `headingClassName`       | `string`                 | Additional classes for the heading element.                                         |
 | `contentClassName`       | `string`                 | Additional classes for the card inner content.                                      |
 | `scrollerRef`            | `RefObject<HTMLElement>` | Reference to the scrolling container element.                                       |
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Jeton](https://www.jeton.com/).
+
+</Callout>
