--- a/content/docs/components/animated-tooltip.mdx
+++ b/content/docs/components/animated-tooltip.mdx
@@ -107,3 +107,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/animated-tooltip.json
   </TabsContent>
 
   </Tabs>
+
+<Callout className="mb-6">
+
+**Credit:** This component is inspired by [Aceternity](https://ui.aceternity.com/components/animated-tooltip).
+
+</Callout>
