--- a/content/docs/components/motion-cards.mdx
+++ b/content/docs/components/motion-cards.mdx
@@ -71,3 +71,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/motion-cards.json
 | `scrollerRef` | `RefObject<HTMLElement>` (optional)               | Reference to the scrolling container; defaults to `window`.       |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Jeton](https://www.jeton.com/).
+
+</Callout>
