--- a/content/docs/components/reveal-text.mdx
+++ b/content/docs/components/reveal-text.mdx
@@ -76,3 +76,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/reveal-text.json
 | `href`           | `string`                                               | If provided, the text becomes a clickable link pointing to this URL. Optional.                    |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Aceternity](https://ui.aceternity.com/components/link-preview).
+
+</Callout>
