--- a/content/docs/components/rythemic-reveal.mdx
+++ b/content/docs/components/rythemic-reveal.mdx
@@ -73,3 +73,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/rythemic-reveal.json
 | `positionToAnimation`   | `number`          | Position in percentage from top of the scroller default is `80`                                                  |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Rhythm Influence](https://www.rhythminfluence.com/).
+
+</Callout>
