--- a/content/docs/components/text-hover-effect.mdx
+++ b/content/docs/components/text-hover-effect.mdx
@@ -61,3 +61,9 @@ npx shadcn@latest add https://ui.unizoy.com/r/text-hover-effect.json
 | `fontSize`               | `number`                 | Font size in pixels `default is 56` same as `text-7xl`.                                                           |
 
 > **Note:** Props marked with `*` are required.
+
+<Callout className="my-6">
+
+**Credit:** This component is inspired by [Aceternity](https://ui.aceternity.com/components/text-hover-effect).
+
+</Callout>
