chore(real-estate-investment-page): update live link and update features title and description

--- a/content/templates/real-estate-investment-page.mdx
+++ b/content/templates/real-estate-investment-page.mdx
@@ -6,17 +6,13 @@ imageLinks:
   - /templates/real-estate-investments/2.png
   - /templates/real-estate-investments/3.png
   - /templates/real-estate-investments/4.png
-liveLink: "http://88.222.212.71:3001/"
+liveLink: "https://real-estate-landing-page.unizoy.com//"
 repoLink: "https://github.com/Unizoy/tourism-website"
 features:
   - heading: Responsive Design
     description: Fully responsive layout that works perfectly on desktop, tablet, and mobile devices.
-  - heading: Dark/Light Mode
-    description: Built-in theme switcher that remembers user preferences with smooth transitions between modes.
-  - heading: Interactive Charts
-    description: Beautiful and interactive data visualization components powered by Recharts.
-  - heading: Custom Components
-    description: Over 20 reusable UI components including tables, cards, and navigation elements.
+  - heading: Reusable GSAP Animations
+    description: Over 20 reusable GSAP components ranging from interactive hover effects to scroll-based animations.
 technologyUsed:
   - react
   - Nextjs
