fix(ui): tabs reset to manual when changing package manager

--- a/content/docs/components/animated-tooltip.mdx
+++ b/content/docs/components/animated-tooltip.mdx
@@ -10,7 +10,7 @@ description: A customizable animated tooltip component.
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-  <Tabs defaultValue="manual">
+<CodeTabs>
 
 {" "}
 
@@ -106,7 +106,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/animated-tooltip.json
 
   </TabsContent>
 
-  </Tabs>
+  </CodeTabs>
 
 <Callout className="mb-6">
 
