--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -8,7 +8,7 @@ description: The Button component you have here is a beautifully designed button
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -60,7 +60,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/button.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
