--- a/content/docs/components/carousel.mdx
+++ b/content/docs/components/carousel.mdx
@@ -10,7 +10,7 @@ description: A customizable Carousel component.
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-  <Tabs defaultValue="manual">
+  <CodeTabs>
 
 {" "}
 
@@ -103,7 +103,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/carousel.json
 
   </TabsContent>
 
-  </Tabs>
+  </CodeTabs>
 
 <Callout className="mb-6">
 
