--- a/content/docs/components/copy-icon.mdx
+++ b/content/docs/components/copy-icon.mdx
@@ -10,7 +10,7 @@ description: When hovering over the clipboard icon, two hidden icons should move
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-  <Tabs defaultValue="manual">
+  <CodeTabs>
 
 {" "}
 
@@ -69,7 +69,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/copy-icon.json
 
   </TabsContent>
 
-  </Tabs>
+  </CodeTabs>
 
 ### Props
 
