--- a/content/docs/components/draggable-carousel.mdx
+++ b/content/docs/components/draggable-carousel.mdx
@@ -8,7 +8,7 @@ description: The DraggableCarousel component is a GSAP-powered animated carousel
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -61,7 +61,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/draggable-carousel.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
