--- a/content/docs/components/image-trail.mdx
+++ b/content/docs/components/image-trail.mdx
@@ -8,7 +8,7 @@ description: A dynamic and interactive React component that creates a trail of i
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -49,7 +49,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/image-trail.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
