--- a/content/docs/components/motion-cards.mdx
+++ b/content/docs/components/motion-cards.mdx
@@ -8,7 +8,7 @@ description: The MotionCard component is a GSAP-powered animated card layout tha
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -60,7 +60,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/motion-cards.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
