--- a/content/docs/components/navigation-icon.mdx
+++ b/content/docs/components/navigation-icon.mdx
@@ -10,7 +10,7 @@ description: When hovering over the navigation icon, the text should move upward
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-  <Tabs defaultValue="manual">
+  <CodeTabs>
 
 {" "}
 
@@ -71,7 +71,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/navigation-icon.json
 
   </TabsContent>
 
-  </Tabs>
+  </CodeTabs>
 
 ### Props
 
