--- a/content/docs/components/reveal-text.mdx
+++ b/content/docs/components/reveal-text.mdx
@@ -9,7 +9,7 @@ description: A dynamic text component that reveals an image on hover with smooth
 />
 
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -56,7 +56,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/reveal-text.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ## Usage
 
