--- a/content/docs/components/scrolling-cards.mdx
+++ b/content/docs/components/scrolling-cards.mdx
@@ -8,7 +8,7 @@ description: A dynamic, scroll-triggered component that creates an engaging card
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -57,7 +57,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/scrolling-cards.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ## Usage
 
