--- a/content/docs/components/scrolling-video-cards.mdx
+++ b/content/docs/components/scrolling-video-cards.mdx
@@ -8,7 +8,7 @@ description: A dynamic scrolling component where videos smoothly moves horizonta
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -55,7 +55,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/scrolling-video-cards.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
