--- a/content/docs/components/sliding-cards.mdx
+++ b/content/docs/components/sliding-cards.mdx
@@ -8,7 +8,7 @@ description: A dynamic component that reveals hidden cards while scrolling.
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-  <Tabs defaultValue="manual">
+  <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -99,7 +99,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/sliding-cards.json
 
   </TabsContent>
 
-  </Tabs>
+  </CodeTabs>
 
 ### Props
 
