--- a/content/docs/components/text-rollup-effect.mdx
+++ b/content/docs/components/text-rollup-effect.mdx
@@ -8,7 +8,7 @@ description: A rollup effect for your texts
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
   <TabsList>
     <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -49,7 +49,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/text-rollup-effect.json
 
   </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
