--- a/content/docs/components/text-slider.mdx
+++ b/content/docs/components/text-slider.mdx
@@ -10,7 +10,7 @@ links:
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -74,7 +74,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/text-slider.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
