--- a/content/docs/components/typewriter.mdx
+++ b/content/docs/components/typewriter.mdx
@@ -10,7 +10,7 @@ links:
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -110,7 +110,7 @@ export function mergeRefs<T>(...refs: (React.Ref<T> | undefined)[]) {
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
