--- a/content/docs/components/floating-navbar.mdx
+++ b/content/docs/components/floating-navbar.mdx
@@ -8,7 +8,7 @@ description: This component provides an elegant navigation menu with animated dr
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -61,6 +61,6 @@ npx shadcn@latest add https://ui.unizoy.com/r/floating-navbar.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 
