--- a/content/docs/components/infinite-moving-cards.mdx
+++ b/content/docs/components/infinite-moving-cards.mdx
@@ -8,7 +8,7 @@ description: This InfiniteMovingCards component creates a continuously scrolling
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -49,7 +49,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/infinite-moving-cards.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
