--- a/content/docs/components/scroll-opacity-effect.mdx
+++ b/content/docs/components/scroll-opacity-effect.mdx
@@ -8,7 +8,7 @@ description: Increasing the opacity of the whole text based on the scoll distanc
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-  <Tabs defaultValue="manual">
+  <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -50,7 +50,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/scroll-opacity-effect.json
 
   </TabsContent>
 
-  </Tabs>
+  </CodeTabs>
 
 ### Props
 
