--- a/content/docs/components/scroll-text-flow.mdx
+++ b/content/docs/components/scroll-text-flow.mdx
@@ -8,7 +8,7 @@ description: ScrollTextFlow is a React component that creates a dynamic scrollin
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-<Tabs defaultValue="manual">
+<CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -55,7 +55,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/scroll-text-flow.json
 
 </TabsContent>
 
-</Tabs>
+</CodeTabs>
 
 ### Props
 
