--- a/content/docs/components/text-hover-effect.mdx
+++ b/content/docs/components/text-hover-effect.mdx
@@ -8,7 +8,7 @@ description: Highligts the text on hover
   className="[&_.preview>[data-orientation=vertical]]:sm:max-w-[70%]"
 />
 
-  <Tabs defaultValue="manual">
+  <CodeTabs>
 
 <TabsList>
   <TabsTrigger value="manual">Manual</TabsTrigger>
@@ -50,7 +50,7 @@ npx shadcn@latest add https://ui.unizoy.com/r/text-hover-effect.json
 
   </TabsContent>
 
-  </Tabs>
+  </CodeTabs>
 
 ### Props
 
